# verbose-lang

./: .gitignore  CMakeLists.txt  README.md  verbose_mockup.ver
src/: ast.cpp  ast.h  lexer.l  main.cpp  operators.h  parser.y  tokens.h
tests/: 1.ast  1.ver  1_1.ast  1_1.ver  1_err.ver  2.ast  2.ver  2_1.ast  2_1.ver  difftest.sh  test.py
